# legal-blockchain-study

./: LICENSE  README.md  requirements_pl.md
app01_java_block/: pom.xml
app01_java_block/docs/sdlc/: 01-system-architecture.md  06-implementation-checklist.md
app01_java_block/frontend/: package-lock.json  package.json  vite.config.ts
app02_cpp_block/: .gitignore  CMakeLists.txt  README.md  requirements.md  requirements_pl.md
app02_cpp_block/config/: application.json
app02_cpp_block/docs/sdlc/: 01-system-architecture.md  02-epics-user-stories.md  03-backend-requirements.md  04-frontend-requirements.md  05-connectors-and-skills.md  06-implementation-checklist.md
app02_cpp_block/frontend/: index.html  package.json  vite.config.ts
app02_cpp_block/frontend/src/: main.tsx
app02_cpp_block/frontend/src/api/: client.ts  useWs.ts
app02_cpp_block/frontend/src/components/: Layout.tsx
app02_cpp_block/frontend/src/i18n/: en.ts  index.tsx  pl.ts
app02_cpp_block/frontend/src/pages/: CrowdfundingPage.tsx  NetworkPage.tsx
app02_cpp_block/src/: main.cpp
app02_cpp_block/src/api/: ApiExceptionHandler.cpp  ApiExceptionHandler.h  ChainController.cpp  ChainController.h  ConsensusController.cpp  ConsensusController.h  ContractController.cpp  ContractController.h  I18nController.cpp  I18nController.h  NftController.cpp  NftController.h  NodeController.cpp  NodeController.h  TransactionController.cpp  TransactionController.h  WalletController.cpp  WalletController.h
app02_cpp_block/src/config/: AppContext.h  Config.cpp  Config.h
app02_cpp_block/src/consensus/: BftStrategy.cpp  BftStrategy.h  ConsensusEngine.cpp  ConsensusEngine.h  ConsensusStrategy.h  ProofOfStakeStrategy.cpp  ProofOfStakeStrategy.h  ProofOfWorkStrategy.cpp  ProofOfWorkStrategy.h
app02_cpp_block/src/contracts/: AgriSupplyChainContract.cpp  AgriSupplyChainContract.h  ContractEngine.cpp  ContractEngine.h  ContractResult.h  MedicalConsentContract.cpp  MedicalConsentContract.h  SmartContract.h
app02_cpp_block/src/core/: Block.cpp  Block.h  BlockCandidate.h  Blockchain.cpp  Blockchain.h  EventBus.h  IdGen.h  JsonUtil.h  LedgerEvent.h  NodeWallet.cpp  NodeWallet.h  TokenomicsService.cpp  TokenomicsService.h  Transaction.cpp  Transaction.h  TransactionType.h
app02_cpp_block/src/crypto/: Base64.h  HashUtil.cpp  HashUtil.h  PqcKeyExchangeService.cpp  PqcKeyExchangeService.h  PqcSignatureService.cpp  PqcSignatureService.h  SecureChannel.cpp  SecureChannel.h
app02_cpp_block/src/nft/: Nft.h  NftService.cpp  NftService.h
app02_cpp_block/src/p2p/: EventBroadcaster.cpp  EventBroadcaster.h  P2pClientService.cpp  P2pClientService.h  P2pService.cpp  P2pService.h  P2pWebSocketController.h  PeerSession.h
app02_cpp_block/tests/: ApiContractIntegrationTest.cpp  BlockchainTest.cpp  ConsensusStrategyTest.cpp  ContractsTest.cpp  PqcCryptoTest.cpp  TwoNodeSyncIntegrationTest.cpp
app03_csharp_block/: .gitignore  CLAUDE.md  LegalChain.slnx  README.md  requirements_pl.md
app03_csharp_block/docs/sdlc/: 01-system-architecture.md  02-epics-user-stories.md  03-backend-requirements.md  04-frontend-requirements.md  05-connectors-and-skills.md  06-implementation-checklist.md
app03_csharp_block/frontend/: package-lock.json  package.json  vite.config.ts
app03_csharp_block/frontend/src/: styles.css
app03_csharp_block/src/LegalChain/: LegalChain.csproj  LegalChainApp.cs  Program.cs
app03_csharp_block/tests/LegalChain.Tests/: ApiContractIntegrationTest.cs  BlockchainTest.cs  ConsensusStrategyTest.cs  ContractsTest.cs  LegalChain.Tests.csproj  PqcCryptoTest.cs  TestNode.cs  TwoNodeSyncIntegrationTest.cs  UnitTest1.cs
app04_python_django_block/: CLAUDE.md  README.md  manage.py  requirements.txt  requirements_pl.md
app04_python_django_block/docs/sdlc/: 01-system-architecture.md  (+5 more)
app04_python_django_block/frontend/: package-lock.json  package.json  vite.config.ts
app04_python_django_block/ledger/: consensus.py  consumers.py  context.py  contracts.py  core.py  crypto.py  middleware.py  nft.py  p2p.py  views.py
app04_python_django_block/legalchain/: asgi.py  settings.py  urls.py
(+164 files in other folders)
